--- a/cmd/webserver/templates/apps_compare.gohtml
+++ b/cmd/webserver/templates/apps_compare.gohtml
@@ -53,7 +53,7 @@
                 </div>
 
                 <input type="hidden" value="{{ .IDs }}" name="ids" id="ids"/>
-                <h5 class="mt-4">{{ len .Apps }}/10 Games Selected</h5>
+                <h5 class="mt-4">Selected Games <small>({{ len .Apps }}/10)</small></h5>
                 <div class="table-responsive">
                     <table class="table table-hover table-striped" data-ordering="false" data-row-type="games" data-path="/games/compare/apps.json" id="apps-table">
                         <thead class="thead-light">
