Hide group chart if no data

--- a/cmd/webserver/templates/apps_compare.gohtml
+++ b/cmd/webserver/templates/apps_compare.gohtml
@@ -83,10 +83,12 @@
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
 
+                    {{ if gt (len .GroupIDs) 0 }}
                     <h5 class="mt-4">Followers</h5>
                     <div id="group-chart">
                         <i class="fas fa-spinner fa-spin"></i>
                     </div>
+                    {{ end }}
 
                     <h5 class="mt-4">Review Score</h5>
                     <div id="score-chart">
