Fix article rendering

--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -49,7 +49,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body minned">
-                                    <div>{{ html .Contents }}</div>
+                                    <div>{{ .GetBody }}</div>
                                 </div>
                             </div>
 
