--- a/cmd/webserver/assets/sass/_tables.scss
+++ b/cmd/webserver/assets/sass/_tables.scss
@@ -82,7 +82,7 @@ table.table {
 
             > div.icon {
                 display: table-cell;
-                vertical-align: middle;
+                vertical-align: top;
                 width: 1%;
             }
 
