Update coop page

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -1135,7 +1135,7 @@
                                                         <td>{{ .Typex }}</td>
                                                         <td>{{ .OSList }}</td>
                                                         <td>{{ .OSArch }}</td>
-                                                        <td>{{ join .OwnsDLCs }}</td>
+                                                        <td>{{ join .OwnsDLCs ", " }}</td>
                                                         <td>{{ .BetaKey }}</td>
                                                         <td>{{ .WorkingDir }}</td>
                                                         <td>{{ .VACModuleFilename }}</td>
