--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -59,7 +59,7 @@
                     <li class="ml-0 ml-lg-auto"></li>
 
                     <li class="nav-item">
-                        <a class="nav-link nav-link-small" href="/games/coop?p={{ .Player.ID }}{{ if .PlayerID }}&p={{ .PlayerID }}{{ end }}" role="tab" rel="nofollow">
+                        <a class="nav-link nav-link-small" href="/games/coop/{{ .Player.ID }}{{ if .PlayerID }},{{ .PlayerID }}{{ end }}" role="tab" rel="nofollow">
                             <i class="fas fa-user-friends"></i> Co-op
                         </a>
                     </li>
@@ -282,6 +282,7 @@
                                         <th scope="col">Player</th>
                                         <th scope="col">Level</th>
                                         <th scope="col">Games</th>
+                                        <th scope="col">Co-op</th>
                                         <th scope="col">Friend Since</th>
                                         <th scope="col"></th>
                                     </tr>
