--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -27,22 +27,24 @@
     {{ template "_webpack_footer" . }}
 
     {{/* Google Tag Manager */}}
-    <script>
-        (function (w, d, s, l, i) {
-            w[l] = w[l] || [];
-            w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-            var f = d.getElementsByTagName(s)[0];
-            var j = d.createElement(s);
-            var dl = l !== 'dataLayer' ? '&l=' + l : '';
-            j.async = true;
-            j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-            f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-5PQT5MB');
-    </script>
+    {{ if eq .Env "production" }}
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+                var f = d.getElementsByTagName(s)[0];
+                var j = d.createElement(s);
+                var dl = l !== 'dataLayer' ? '&l=' + l : '';
+                j.async = true;
+                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, 'script', 'dataLayer', 'GTM-5PQT5MB');
+        </script>
 
-    <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PQT5MB" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
+        <noscript>
+            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PQT5MB" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        </noscript>
+    {{ end }}
 
     {{ if .IncludeSocialJS }}
 
