Update app details page

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -1,15 +1,6 @@
 #app-page {
 
     #details {
-        > img {
-            width: 100%;
-            @include media-breakpoint-up(md) {
-                width: auto;
-                position: absolute;
-                right: 1.25rem;
-                height: 150px;
-            }
-        }
 
         video {
             max-width: 100%;
@@ -33,6 +24,26 @@
             .float-right {
                 font-size: 0.7rem;
                 padding-top: 2px;
+            }
+        }
+
+        #links {
+            div {
+                @include clearfix();
+                margin-bottom: 1px;
+
+                img {
+                    margin-right: 2px;
+                    width: 20px;
+                    height: 20px;
+                    float: left;
+                }
+
+                a {
+                    display: block;
+                    font-size: .9rem;
+                    line-height: 18px;
+                }
             }
         }
     }
@@ -63,7 +74,7 @@
     #media {
         img, video {
             width: 100%;
-            margin-bottom: 1px;
+            margin-bottom: 2px;
             display: block;
             background-color: #1b2738;
         }
