--- a/cmd/webserver/templates/admin.gohtml
+++ b/cmd/webserver/templates/admin.gohtml
@@ -234,6 +234,13 @@
                                 </div>
                             </div>
 
+                            <div class="form-group row">
+                                <label for="flush-delay-queue" class="col-sm-3 col-form-label">Flush Delay Queue</label>
+                                <div class="col-sm-9">
+                                    <input type="text" class="form-control" id="flush-delay-queue" name="flush-delay-queue">
+                                </div>
+                            </div>
+
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
 
