--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -26,25 +26,22 @@
     <script>const user = JSON.parse({{ .GetUserJSON }});</script>
     {{ template "_webpack_footer" . }}
 
-    {{/* Google Tag Manager */}}
-    {{ if eq .Env "production" }}
-        <script>
-            (function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-                var f = d.getElementsByTagName(s)[0];
-                var j = d.createElement(s);
-                var dl = l !== 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-5PQT5MB');
-        </script>
+    {{/* Google Analytics */}}
+    <script src="https://www.googletagmanager.com/gtag/js?id=UA-125104-31"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-        <noscript>
-            <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5PQT5MB" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-        </noscript>
-    {{ end }}
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+        gtag('config', 'UA-125104-31');
+        {{ if .IsLoggedIn }}
+        gtag('set', {'user_cc': '{{ .UserProductCC.ProductCode }}'});
+        gtag('set', {'user_id': {{ .UserID }}});
+        {{ end }}
+    </script>
 
     {{ if .IncludeSocialJS }}
 
