--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -41,7 +41,7 @@
                             {{ if gt .PlayerLevel 0}}
                                 Your achieved level <strong>{{ comma .PlayerLevel }}</strong> on <strong>{{ .PlayerTime }}</strong> and are ranked <strong>{{ .PlayerRank }}</strong> on Game DB!
                             {{ else }}
-                                You have not achieved this badge.
+                                You have not crafted this badge.
                             {{ end }}
 
                         {{ else }}
