--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -8,7 +8,7 @@
                 <img src="/assets/img/discord.png" class="float-right" alt="Add Steam Discord Bot to your server" title="Add Steam Discord Bot to your server">
             </a>
             <h1><i class="fas fa-robot"></i> Steam Discord Bot</h1>
-            <p class="lead"><a href="{{ .Link }}" target="_blank" rel="noopener">Add the Steam Discord Bot to your Discord server</a>.</p>
+            <p class="lead">Add the Steam Discord Bot to <a href="{{ .Link }}" target="_blank" rel="noopener">your server</a> / Test the commands out on <a href="/discord-server">our server</a>.</p>
             <small>Used on {{ .Guilds }}+ servers so far.</small>
         </div>
 
