Tidy helper code

--- a/cmd/webserver/templates/news.gohtml
+++ b/cmd/webserver/templates/news.gohtml
@@ -38,7 +38,7 @@
                             <div class="card mb-3" id="{{ .ID }}">
                                 <div class="card-header">
 
-                                    <img src="" data-lazy="{{ .GetIcon }}" alt="" data-lazy-alt="{{ .Title }}" class="rounded float-left" data-src="/assets/img/no-app-image-square.jpg">
+                                    <img src="" data-lazy="{{ .GetAppIcon }}" alt="" data-lazy-alt="{{ .Title }}" class="rounded float-left" data-src="/assets/img/no-app-image-square.jpg">
 
                                     <div class="text-truncate">
                                         <strong title="{{ .Title }}">{{ .Title }}</strong>
